--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ img:hover {
 /* create your tile classes! we recommend .small .med .large */
 .small{
   width: 100%;
-  display: block;
+  height: 100%
 }
 .med{
   width: 200%;
